# GrADS-ng

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  static.yml
cmake/: FindGD.cmake  FindGadap.cmake  FindGeoTIFF.cmake  FindGrib2C.cmake  FindHDF4.cmake  FindHDF5.cmake  FindLIBDAP.cmake  FindReadline.cmake  FindSHAPELIB.cmake  FindSX.cmake  FindUdunits.cmake
doc/: index.html
src/: .clang-format  CMakeLists.txt  bitmaps.h  bitmaps2.h  bufrscan.c  bufrstn.c  config.h.in  dodstn.c  gabufr.c  gabufr.h  gabufrtbl.c  gacfg.c  gaddes.c  gaexpr.c  gafunc.c  gagmap.c  gagmap.h  gagui.c  gagui.h  gagx.c  gaio.c  galloc.c  gamach.c  gasdf.c  gasdf.h  gasdf_std_time.h  gatxt.c  gatypes.h  gauser.c  gautil.c  grads.c  grads.h  gradspy.c  gradspy.h  grib2scan.c  gribmap.c  gribscan.c  gs.h  gscrpt.c  gsgui.c  (+24 more)
