cmake_minimum_required(VERSION 3.10)

project(GrADS VERSION 2.2.3 HOMEPAGE_URL jennifer.m.adams@nasa.gov LANGUAGES C)

set(CMAKE_C_STANDARD 11)

set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

include(CheckIncludeFile)
include(CheckLibraryExists)
include(CheckFunctionExists)
include(CheckSymbolExists)

option(USEGADAP "GrADS specific library for accessing station data" OFF)
option(USEDAP "Use DAP" OFF)
option(USEGUI "Enable GUI" ON)
option(USEREADLINE "Use readline" ON)
option(USEGEOTIFF "GeoTIFF support" OFF)
option(USESHP "Use shapefile" OFF)
option(USEGD "Use GD" OFF)
option(USECAIRO "Enable Cairo output" ON)
option(USEGRIB2 "GRIB2 support" OFF)
option(USEHDF "HDF support" OFF)
option(USEHDF5 "HDF5 support" OFF)
option(USENC4 "NetCDF4 support" OFF)
option(USENC3 "NetCDF3 support" OFF)

if(CMAKE_C_BYTE_ORDER STREQUAL "BIG_ENDIAN")
  set(BYTEORDER 1)
elseif(CMAKE_C_BYTE_ORDER STREQUAL "LITTLE_ENDIAN")
  set(BYTEORDER 0)
else()
  set(BYTEORDER 0)
  message(WARNING "Endianness could not be determined.")
endif()

check_include_file("malloc.h" HAVE_MALLOC_H)

if(USECAIRO)
  find_package(Cairo)
  find_package(Freetype)
  if(NOT CAIRO_FOUND OR NOT FREETYPE_FOUND)
    set(USECAIRO OFF)
  endif()
endif()

if(USEREADLINE)
  find_package(Readline)
  if(READLINE_FOUND)
    list(APPEND grads_LIBS Readline::Readline)
  else()
    set(USEREADLINE OFF)
  endif()
endif()

if(USEGUI)
  find_package(SX)
  if(SX_FOUND)
    list(APPEND grads_LIBS SX::SX)
  else()
    set(USEGUI OFF)
  endif()
endif()

check_function_exists("fseeko" HAVE_FSEEKO)
check_function_exists("SimpleGetFile" HAVE_SIMPLEGETFILE)

check_library_exists("m" "sqrt" "" HAVE_LIBM)
if(HAVE_LIBM)
  list(APPEND grads_LIBS m)
endif()

if(USENC3 OR USENC4)
  set(USENC ON)
endif()

add_subdirectory(src)
